[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hls-stream-capture"
version = "0.1.0"
description = "Tool to capture HLS (m3u8) live streams using ffmpeg-asyncio"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ffmpeg-asyncio==0.1.3",
    "pathlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
hlscapture = "hls_stream_capture.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hls_stream_capture"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
